--- a/l3kernel/l3fp-convert.dtx
+++ b/l3kernel/l3fp-convert.dtx
@@ -157,7 +157,7 @@
   {
     \exp_after:wN \@@_to_scientific_normal:wNw
     \exp_after:wN e
-    \__int_value:w \__int_eval:w #2 - \c_one
+    \__int_value:w \__int_eval:w #2 - 1
     ; #3 #4 #5 #6 ;
   }
 \cs_new:Npn \@@_to_scientific_normal:wNw #1 ; #2#3;
@@ -234,17 +234,17 @@
 \cs_new:Npn \@@_to_decimal_normal:wnnnnn
     \s_@@ \@@_chk:w 1 #1 #2 #3#4#5#6 ;
   {
-    \int_compare:nNnTF {#2} > \c_zero
+    \int_compare:nNnTF {#2} > 0
       {
-        \int_compare:nNnTF {#2} < \c_sixteen
+        \int_compare:nNnTF {#2} < \c_@@_prec_int
           {
-            \@@_decimate:nNnnnn { \c_sixteen - #2 }
+            \@@_decimate:nNnnnn { \c_@@_prec_int - #2 }
               \@@_to_decimal_large:Nnnw
           }
           {
             \exp_after:wN \exp_after:wN
             \exp_after:wN \@@_to_decimal_huge:wnnnn
-            \prg_replicate:nn { #2 - \c_sixteen } { 0 } ;
+            \prg_replicate:nn { #2 - \c_@@_prec_int } { 0 } ;
           }
         {#3} {#4} {#5} {#6}
       }
@@ -259,7 +259,7 @@
 \cs_new:Npn \@@_to_decimal_large:Nnnw #1#2#3#4;
   {
     \exp_after:wN \@@_trim_zeros:w \__int_value:w
-      \if_int_compare:w #2 > \c_zero
+      \if_int_compare:w #2 > 0 \exp_stop_f:
         #2
       \fi:
       \exp_stop_f:
@@ -308,17 +308,10 @@
   }
 \cs_new:Npn \@@_to_tl_normal:nnnnn #1
   {
-    \if_int_compare:w #1 > \c_sixteen
-      \exp_after:wN \@@_to_tl_scientific:wnnnnn
-    \else:
-      \if_int_compare:w #1 < - \c_two
-        \exp_after:wN \exp_after:wN
-        \exp_after:wN \@@_to_tl_scientific:wnnnnn
-      \else:
-        \exp_after:wN \exp_after:wN
-        \exp_after:wN \@@_to_decimal_normal:wnnnnn
-      \fi:
-    \fi:
+    \int_compare:nTF
+      { -2 <= #1 <= \c_@@_prec_int }
+      { \@@_to_decimal_normal:wnnnnn }
+      { \@@_to_tl_scientific:wnnnnn }
     \s_@@ \@@_chk:w 1 0 {#1}
   }
 \cs_new:Npn \@@_to_tl_scientific:wnnnnn
@@ -326,7 +319,7 @@
   {
     \exp_after:wN \@@_to_tl_scientific:wNw
     \exp_after:wN e
-    \__int_value:w \__int_eval:w #2 - \c_one
+    \__int_value:w \__int_eval:w #2 - 1
     ; #3 #4 #5 #6 ;
   }
 \cs_new:Npn \@@_to_tl_scientific:wNw #1 ; #2#3;
@@ -420,7 +413,7 @@
       \@@_case_return:nw { \exp_after:wN \c_zero_fp }
     \else:
       \exp_after:wN \@@_from_dim:wNw
-      \__int_value:w \__int_eval:w #1 - \c_four
+      \__int_value:w \__int_eval:w #1 - 4
         \if_meaning:w - #2
           \exp_after:wN , \exp_after:wN 2 \__int_value:w
         \else:
