--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -239,7 +239,7 @@
 \cs_new:Npn \@@_randint_o:Nw ? #1 @
   {
     \if_case:w
-      \__int_eval:w \@@_array_count:n {#1} - \c_one \__int_eval_end:
+      \__int_eval:w \@@_array_count:n {#1} - 1 \__int_eval_end:
          \exp_after:wN \@@_randint_e:w \c_one_fp #1
     \or: \@@_randint_e:w #1
     \else:
@@ -255,19 +255,19 @@
       {
         \if_meaning:w 1 #1
           \if_int_compare:w
-            \use_i_delimit_by_q_stop:nw #3 \q_stop > \c_sixteen
-            \exp_after:wN \c_one
+            \use_i_delimit_by_q_stop:nw #3 \q_stop > \c_@@_prec_int
+            1 \exp_stop_f:
           \fi:
         \fi:
       }
-      { \c_one }
+      { 1 \exp_stop_f: }
   }
 \cs_new:Npn \@@_randint_e:w #1; #2;
   {
     \if_case:w
         \@@_randint_badarg:w #1;
         \@@_randint_badarg:w #2;
-        \fp_compare:nNnTF { #1; } > { #2; } { \c_one } { \c_zero }
+        \fp_compare:nNnTF { #1; } > { #2; } { 1 } { 0 } \exp_stop_f:
       \exp_after:wN \exp_after:wN \exp_after:wN \@@_randint_e:wnn
         \@@_parse:n { #2; - #1; } { #1; } { #2; }
     \or:
