--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1069,7 +1069,7 @@
           }
         \__iow_with:Nnn \tex_newlinechar:D { `\^^J }
           {
-            \__iow_with:Nnn \tex_errorcontextlines:D { - \c_one }
+            \__iow_with:Nnn \tex_errorcontextlines:D { -1 }
               {
                 \group_begin:
                   \cs_set_protected:Npn &
@@ -1119,7 +1119,7 @@
 % deliberate change by a user this is only set in format mode.
 %    \begin{macrocode}
 %<*initex>
-\int_gset:Nn \tex_errorcontextlines:D { - \c_one }
+\int_gset:Nn \tex_errorcontextlines:D { -1 }
 %</initex>
 %    \end{macrocode}
 %
@@ -1639,13 +1639,13 @@
                 \prop_put:cnn { l_@@_redirect_ #2 _prop } {#3} {#2}
                 \@@_kernel_warning:nnxxxx
                   { kernel } { message-redirect-loop }
-                  { \seq_item:Nn \l_@@_class_loop_seq { \c_one } }
-                  { \seq_item:Nn \l_@@_class_loop_seq { \c_two } }
+                  { \seq_item:Nn \l_@@_class_loop_seq { 1 } }
+                  { \seq_item:Nn \l_@@_class_loop_seq { 2 } }
                   {#3}
                   {
                     \seq_map_function:NN \l_@@_class_loop_seq
                       \@@_redirect_loop_list:n
-                    { \seq_item:Nn \l_@@_class_loop_seq { \c_one } }
+                    { \seq_item:Nn \l_@@_class_loop_seq { 1 } }
                   }
               }
               { \@@_redirect_loop_chk:onn \l_@@_class_tl {#2} {#3} }
@@ -2281,7 +2281,7 @@
       {
         \__iow_with:Nnn \tex_newlinechar:D { 10 }
           {
-            \__iow_with:Nnn \tex_errorcontextlines:D { - \c_one }
+            \__iow_with:Nnn \tex_errorcontextlines:D { -1 }
               {
                 \etex_showtokens:D \exp_after:wN \exp_after:wN \exp_after:wN
                   { \exp_after:wN \l_@@_internal_tl }
