--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1601,7 +1601,7 @@
   \cs_new_protected:Npn \@@_set_rescan_single:nn #1
     {
       \int_compare:nNnTF
-        { \char_value_catcode:n { `#1 } / \c_three } = \c_four
+        { \char_value_catcode:n { `#1 } / 3 } = 4
         { \@@_set_rescan_single_aux:nn {#1} }
         {
           \int_compare:nNnTF { `#1 } < { `\~ }
@@ -1634,7 +1634,7 @@
               \char_value_catcode:n
                 { \exp_last_unbraced:Nf ` \str_head:n {#2} ~ }
             }
-            = \c_ten { ~ }
+            = { 10 } { ~ }
           \exp_after:wN \@@_rescan:w
           \exp_after:wN \prg_do_nothing:
           \etex_scantokens:D { #2 #1 }
