--- a/l3kernel/l3flag.dtx
+++ b/l3kernel/l3flag.dtx
@@ -208,7 +208,7 @@
     \if_cs_exist:w flag~#2~#1 \cs_end:
       \cs_set_eq:cN { flag~#2~#1 } \tex_undefined:D
       \exp_after:wN \@@_clear:wn
-      \__int_value:w \__int_eval:w \c_one + #1
+      \__int_value:w \__int_eval:w 1 + #1
     \else:
       \use_i:nnn
     \fi:
@@ -278,7 +278,7 @@
 \cs_new:Npn \@@_height_loop:wn #1 ; #2
   {
     \if_cs_exist:w flag~#2~#1 \cs_end:
-      \exp_after:wN \@@_height_loop:wn \__int_value:w \__int_eval:w \c_one +
+      \exp_after:wN \@@_height_loop:wn \__int_value:w \__int_eval:w 1 +
     \else:
       \exp_after:wN \@@_height_end:wn
     \fi:
