--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -301,6 +301,22 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{variable}{\c_@@_prec_int, \c_@@_half_prec_int, \c_@@_block_int}
+%   The number of digits of floating points.
+%    \begin{macrocode}
+\int_const:Nn \c_@@_prec_int { 16 }
+\int_const:Nn \c_@@_half_prec_int { 8 }
+\int_const:Nn \c_@@_block_int { 4 }
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{variable}{\c_@@_myriad_int}
+%   Blocks have $4$~digits so this integer is useful.
+%    \begin{macrocode}
+\int_const:Nn \c_@@_myriad_int { 10000 }
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{variable}[int]{\c_@@_max_exponent_int}
 %   Normal floating point numbers have an exponent at most
 %   \texttt{max_exponent} in absolute value.  Larger numbers are rounded
@@ -316,6 +332,14 @@
 %   $n$, because we can multiply $n$ with each block safely.
 %    \begin{macrocode}
 \int_const:Nn \c_@@_max_exponent_int { 10000 }
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{variable}{\c_@@_max_exp_exponent_int}
+%   If a number's exponent is larger than that, its exponential
+%   overflows/underflows.
+%    \begin{macrocode}
+\int_const:Nn \c_@@_max_exp_exponent_int { 5 }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -372,7 +396,7 @@
 %   turned to $2$ (negative), $1$ (\texttt{nan}) to $1$, and $2$ to $0$.
 %    \begin{macrocode}
 \cs_new:Npn \@@_neg_sign:N #1
-  { \__int_eval:w \c_two - #1 \__int_eval_end: }
+  { \__int_eval:w 2 - #1 \__int_eval_end: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -391,9 +415,9 @@
 \cs_new:Npn \@@_sanitize:Nw #1 #2;
   {
     \if_case:w
-        \if_int_compare:w #2 > \c_@@_max_exponent_int \c_one \else:
-        \if_int_compare:w #2 < - \c_@@_max_exponent_int \c_two \else:
-        \if_meaning:w 1 #1 \c_three \else: \c_zero \fi: \fi: \fi:
+        \if_int_compare:w #2 > \c_@@_max_exponent_int 1 ~ \else:
+        \if_int_compare:w #2 < - \c_@@_max_exponent_int 2 ~ \else:
+        \if_meaning:w 1 #1 3 ~ \else: 0 ~ \fi: \fi: \fi:
     \or: \exp_after:wN \@@_overflow:w
     \or: \exp_after:wN \@@_underflow:w
     \or: \exp_after:wN \@@_sanitize_zero:w
@@ -717,7 +741,7 @@
   {
     \cs:w
       @@_decimate_
-      \if_int_compare:w \__int_eval:w #1 > \c_sixteen
+      \if_int_compare:w \__int_eval:w #1 > \c_@@_prec_int
         tiny
       \else:
         \__int_to_roman:w \__int_eval:w #1
@@ -943,7 +967,7 @@
 \cs_new:Npn \@@_int_normal:nnnnn #1 #2#3#4#5
   {
     \if_int_compare:w #1 > \c_zero
-      \@@_decimate:nNnnnn { \c_sixteen - #1 }
+      \@@_decimate:nNnnnn { \c_@@_prec_int - #1 }
         \@@_int_test:Nw
         {#2} {#3} {#4} {#5}
     \else:
@@ -1008,7 +1032,7 @@
 \cs_new:Npn \@@_small_int_normal:NnwTF #1#2#3;
   {
     \if_int_compare:w #2 > \c_zero
-      \@@_decimate:nNnnnn { \c_sixteen - #2 }
+      \@@_decimate:nNnnnn { \c_@@_prec_int - #2 }
         \@@_small_int_test:NnnwNnw
         #3 #1 {#2}
     \else:
@@ -1021,7 +1045,7 @@
     \if_meaning:w 0 #1
       \exp_after:wN \@@_small_int_true:wTF
       \__int_value:w \if_meaning:w 2 #5 - \fi:
-        \if_int_compare:w #6 > \c_eight
+        \if_int_compare:w #6 > \c_@@_half_prec_int
           1 0000 0000
         \else:
           #3
