--- a/l3kernel/l3fp-expo.dtx
+++ b/l3kernel/l3fp-expo.dtx
@@ -167,7 +167,7 @@
   { %^^A todo: ln(1) should be "exact zero", not "underflow"
     \exp_after:wN \@@_sanitize:Nw
     \__int_value:w % for the overall sign
-      \if_int_compare:w #1 < \c_one
+      \if_int_compare:w #1 < 1 \exp_stop_f:
         2
       \else:
         0
@@ -198,8 +198,8 @@
     \__int_value:w
       \if_case:w #1 \exp_stop_f:
       \or:
-        \if_int_compare:w #2 < \c_four
-          \__int_eval:w \c_ten - #2
+        \if_int_compare:w #2 < 4 \exp_stop_f:
+          \__int_eval:w 10 - #2
         \else:
           6
         \fi:
@@ -236,7 +236,7 @@
   { #1#2; {#3#4#5#6} {#7} }
 \cs_new:Npn \@@_ln_x_iii_var:NNNNNw #1 #2#3#4#5 #6;
   {
-    #1#2#3#4#5 + \c_one ;
+    #1#2#3#4#5 + 1 ;
     {#1#2#3#4#5} {#6}
   }
 %    \end{macrocode}
@@ -476,7 +476,7 @@
   { \@@_ln_Taylor_loop:www 21 ; {0000}{0000}{0000}{0000}{0000}{0000} ; }
 \cs_new:Npn \@@_ln_Taylor_loop:www #1; #2; #3;
   {
-    \if_int_compare:w #1 = \c_one
+    \if_int_compare:w #1 = 1 \exp_stop_f:
       \@@_ln_Taylor_break:w
     \fi:
     \exp_after:wN \@@_fixed_div_int:wwN \c_@@_one_fixed_tl ; #1;
@@ -484,7 +484,7 @@
     \@@_fixed_mul:wwn #3;
     {
       \exp_after:wN \@@_ln_Taylor_loop:www
-      \__int_value:w \__int_eval:w #1 - \c_two ;
+      \__int_value:w \__int_eval:w #1 - 2 ;
     }
     #3;
   }
@@ -546,11 +546,11 @@
 \cs_new:Npn \@@_ln_exponent:wn #1; #2
   {
     \if_case:w #2 \exp_stop_f:
-      \c_zero \@@_case_return:nw { \@@_fixed_to_float:Nw 2 }
+      0 \@@_case_return:nw { \@@_fixed_to_float:Nw 2 }
     \or:
       \exp_after:wN \@@_ln_exponent_one:ww \__int_value:w
     \else:
-      \if_int_compare:w #2 > \c_zero
+      \if_int_compare:w #2 > 0 \exp_stop_f:
         \exp_after:wN \@@_ln_exponent_small:NNww
         \exp_after:wN 0
         \exp_after:wN \@@_fixed_sub:wwn \__int_value:w
@@ -568,7 +568,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_ln_exponent_one:ww 1; #1;
   {
-    \c_zero
+    0
     \exp_after:wN \@@_fixed_sub:wwn \c_@@_ln_x_fixed_tl ; #1;
     \@@_fixed_to_float:wN 0
   }
@@ -580,7 +580,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_ln_exponent_small:NNww #1#2#3; #4#5#6#7#8#9;
   {
-    \c_four
+    4
     \exp_after:wN \@@_fixed_mul:wwn
       \c_@@_ln_x_fixed_tl ;
       {#3}{0000}{0000}{0000}{0000}{0000} ;
@@ -635,29 +635,29 @@
     \exp_after:wN \@@_sanitize:Nw
     \exp_after:wN 0
     \__int_value:w #1 \__int_eval:w
-      \if_int_compare:w #4 < - \c_eight
-        \c_one
+      \if_int_compare:w #4 < - \c_@@_half_prec_int
+        1
         \exp_after:wN \@@_add_big_i_o:wNww
-        \__int_value:w \__int_eval:w \c_one - #4 ;
+        \__int_value:w \__int_eval:w 1 - #4 ;
         0 {1000}{0000}{0000}{0000} ; #5;
         \exp:w
       \else:
-        \if_int_compare:w #4 > \c_five % cf \c_@@_max_exponent_int
+        \if_int_compare:w #4 > \c_@@_max_exp_exponent_int
           \exp_after:wN \@@_exp_overflow:
           \exp:w
         \else:
-          \if_int_compare:w #4 < \c_zero
+          \if_int_compare:w #4 < 0 \exp_stop_f:
             \exp_after:wN \use_i:nn
           \else:
             \exp_after:wN \use_ii:nn
           \fi:
           {
-            \c_zero
+            0
             \@@_decimate:nNnnnn { - #4 }
               \@@_exp_Taylor:Nnnwn
           }
           {
-            \@@_decimate:nNnnnn { \c_sixteen - #4 }
+            \@@_decimate:nNnnnn { \c_@@_prec_int - #4 }
               \@@_exp_pos_large:NnnNwn
           }
           #5
@@ -666,10 +666,10 @@
           \exp:w
         \fi:
       \fi:
-    \exp_after:wN \c_zero
+    \exp_after:wN \exp_end:
   }
 \cs_new:Npn \@@_exp_overflow:
-  { + \c_two * \c_@@_max_exponent_int ; {1000} {0000} {0000} {0000} ; }
+  { + 2 * \c_@@_max_exponent_int ; {1000} {0000} {0000} {0000} ; }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -695,7 +695,7 @@
   { \@@_exp_Taylor_loop:www 10 ; #1 ; #1 ; \s__stop }
 \cs_new:Npn \@@_exp_Taylor_loop:www #1; #2; #3;
   {
-    \if_int_compare:w #1 = \c_one
+    \if_int_compare:w #1 = 1 \exp_stop_f:
       \exp_after:wN \@@_exp_Taylor_break:Nww
     \fi:
     \@@_fixed_div_int:wwN #3 ; #1 ;
@@ -987,7 +987,7 @@
     \s_@@ \@@_chk:w 1 #1#2#3; \s_@@ \@@_chk:w #4#5
   {
     \if_int_compare:w \__str_if_eq_x:nn { #2 #3 }
-              { 1 {1000} {0000} {0000} {0000} } = \c_zero
+              { 1 {1000} {0000} {0000} {0000} } = 0 \exp_stop_f:
       \if_int_compare:w #4 #1 = 32 \exp_stop_f:
         \exp_after:wN \@@_case_return_ii_o:ww
       \fi:
@@ -999,7 +999,7 @@
       \exp_after:wN #5
     \or:
       \if_meaning:w 2 #5 \exp_after:wN \reverse_if:N \fi:
-      \if_int_compare:w #2 > \c_zero
+      \if_int_compare:w #2 > 0 \exp_stop_f:
         \exp_after:wN \@@_case_return_o:Nww
         \exp_after:wN \c_inf_fp
       \else:
@@ -1034,7 +1034,7 @@
     \exp_after:wN \@@_sanitize:Nw
     \exp_after:wN 0
     \__int_value:w
-      \if:w #1 \if_int_compare:w #3 > \c_zero 0 \else: 2 \fi:
+      \if:w #1 \if_int_compare:w #3 > 0 \exp_stop_f: 0 \else: 2 \fi:
         \exp_after:wN \@@_pow_npos_aux:NNnww
         \exp_after:wN +
         \exp_after:wN \@@_fixed_to_float:wN
@@ -1066,7 +1066,7 @@
   }
 \cs_new:Npn \@@_pow_exponent:wnN #1; #2
   {
-    \if_int_compare:w #2 > \c_zero
+    \if_int_compare:w #2 > 0 \exp_stop_f:
       \exp_after:wN \@@_pow_exponent:Nwnnnnnw % n\ln(10) - (-\ln(x))
       \exp_after:wN +
     \else:
@@ -1098,7 +1098,7 @@
   }
 \cs_new:Npn \@@_pow_B:wwN #1#2#3#4#5#6; #7;
   {
-    \if_int_compare:w #7 < \c_zero
+    \if_int_compare:w #7 < 0 \exp_stop_f:
       \exp_after:wN \@@_pow_C_neg:w \__int_value:w -
     \else:
       \if_int_compare:w #7 < 22 \exp_stop_f:
@@ -1113,7 +1113,7 @@
   }
 \cs_new:Npn \@@_pow_C_overflow:w #1; #2; #3
   {
-    + \c_two * \c_@@_max_exponent_int
+    + 2 * \c_@@_max_exponent_int
     \exp_after:wN \@@_fixed_continue:wn \c_@@_one_fixed_tl ;
   }
 \cs_new:Npn \@@_pow_C_neg:w #1 ; 1
@@ -1134,7 +1134,7 @@
       \else:
         \exp_after:wN \@@_pow_C_overflow:w \__int_value:w
       \fi:
-      \__int_eval:w #1 - \c_one \exp_after:wN ;
+      \__int_eval:w #1 - 1 \exp_after:wN ;
     \fi:
   }
 \cs_new:Npn \@@_pow_C_pack:w
@@ -1159,7 +1159,7 @@
     \if_case:w \@@_pow_neg_case:w #4 ;
       \exp_after:wN \@@_pow_neg_aux:wNN
     \or:
-      \if_int_compare:w \__int_eval:w #1 / \c_two = \c_one
+      \if_int_compare:w \__int_eval:w #1 / 2 = 1 \exp_stop_f:
         \@@_invalid_operation_o:Nww ^ #3; #4;
         \exp:w \exp_end_continue_f:w
         \exp_after:wN \exp_after:wN
@@ -1175,7 +1175,7 @@
     \exp_after:wN \s_@@
     \exp_after:wN \@@_chk:w
     \exp_after:wN #2
-    \__int_value:w \__int_eval:w \c_two - #3 \__int_eval_end:
+    \__int_value:w \__int_eval:w 2 - #3 \__int_eval_end:
   }
 %    \end{macrocode}
 % ^^A todo: is this \@@_exp_after_o:w necessary?  Appropriate?
@@ -1204,24 +1204,25 @@
 \cs_new:Npn \@@_pow_neg_case:w \s_@@ \@@_chk:w #1#2#3;
   {
     \if_case:w #1 \exp_stop_f:
-           -\c_one
+           -1
     \or:   \@@_pow_neg_case_aux:nnnnn #3
-    \or:   -\c_one
-    \else: \c_one
+    \or:   -1
+    \else: 1
     \fi:
+    \exp_stop_f:
   }
 \cs_new:Npn \@@_pow_neg_case_aux:nnnnn #1#2#3#4#5
   { \@@_pow_neg_case_aux:w #1 ; #2 #3 ; #4 #5 ; }
 \cs_new:Npn \@@_pow_neg_case_aux:w #1 ; #2 ; #3 ;
   {
-    \if_int_compare:w #1 > \c_sixteen
-      -\c_one
+    \if_int_compare:w #1 > \c_@@_prec_int
+      -1
     \else:
       \if_int_odd:w #3 \exp_stop_f:
-        \if_int_compare:w #1 = \c_sixteen
-          \c_zero
+        \if_int_compare:w #1 = \c_@@_prec_int
+          0
         \else:
-          \c_one
+          1
         \fi:
       \else:
         \exp_after:wN \@@_pow_neg_case_aux:w
