--- a/l3kernel/l3fp-round.dtx
+++ b/l3kernel/l3fp-round.dtx
@@ -73,6 +73,14 @@
 %
 % \subsection{Rounding tools}
 %
+% \begin{variable}{\c_@@_five_int}
+%   This is used as the half-point for which numbers are rounded
+%   up/down.
+%    \begin{macrocode}
+\int_const:Nn \c_@@_five_int { 5 }
+%    \end{macrocode}
+% \end{variable}
+%
 % Floating point operations often yield a result that cannot be exactly
 % represented in a significand with $16$ digits.  In that case, we need to
 % round the exact result to a representable number.  The \textsc{ieee}
@@ -177,7 +185,7 @@
   }
 \cs_new:Npn \@@_round_to_nearest:NNN #1 #2 #3
   {
-    \if_int_compare:w #3 > \c_five
+    \if_int_compare:w #3 > \c_@@_five_int
       \@@_round_return_one:
     \else:
       \if_meaning:w 5 #3
@@ -190,7 +198,7 @@
   }
 \cs_new:Npn \@@_round_to_nearest_ninf:NNN #1 #2 #3
   {
-    \if_int_compare:w #3 > \c_five
+    \if_int_compare:w #3 > \c_@@_five_int
       \@@_round_return_one:
     \else:
       \if_meaning:w 5 #3
@@ -203,14 +211,14 @@
   }
 \cs_new:Npn \@@_round_to_nearest_zero:NNN #1 #2 #3
   {
-    \if_int_compare:w #3 > \c_five
+    \if_int_compare:w #3 > \c_@@_five_int
       \@@_round_return_one:
     \fi:
     \c_zero
   }
 \cs_new:Npn \@@_round_to_nearest_pinf:NNN #1 #2 #3
   {
-    \if_int_compare:w #3 > \c_five
+    \if_int_compare:w #3 > \c_@@_five_int
       \@@_round_return_one:
     \else:
       \if_meaning:w 5 #3
@@ -321,7 +329,7 @@
 \cs_new_eq:NN \@@_round_to_nearest_ninf_neg:NNN \@@_round_to_nearest_pinf:NNN
 \cs_new:Npn \@@_round_to_nearest_zero_neg:NNN #1 #2 #3
   {
-    \if_int_compare:w #3 > \c_four
+    \if_int_compare:w #3 < \c_@@_five_int \else:
       \@@_round_return_one:
     \fi:
     \c_zero
@@ -459,19 +467,19 @@
   }
 \cs_new:Npn \@@_round_normal:NwNNnw #1#2 \s_@@ \@@_chk:w 1#3#4#5;
   {
-    \@@_decimate:nNnnnn { \c_sixteen - #4 - #2 }
+    \@@_decimate:nNnnnn { \c_@@_prec_int - #4 - #2 }
       \@@_round_normal:NnnwNNnn #5 #1 #3 {#4} {#2}
   }
 \cs_new:Npn \@@_round_normal:NnnwNNnn #1#2#3#4; #5#6
   {
     \exp_after:wN \@@_round_normal:NNwNnn
     \__int_value:w \__int_eval:w
-      \if_int_compare:w #2 > \c_zero
+      \if_int_compare:w #2 > 0 \exp_stop_f:
         1 \__int_value:w #2
         \exp_after:wN \@@_round_pack:Nw
         \__int_value:w \__int_eval:w 1#3 +
       \else:
-        \if_int_compare:w #3 > \c_zero
+        \if_int_compare:w #3 > 0 \exp_stop_f:
           1 \__int_value:w #3 +
         \fi:
       \fi:
@@ -483,7 +491,7 @@
       0000 0000 0000 0000 ; #6
   }
 \cs_new:Npn \@@_round_pack:Nw #1
-  { \if_meaning:w 2 #1 + \c_one \fi: \__int_eval_end: }
+  { \if_meaning:w 2 #1 + 1 \fi: \__int_eval_end: }
 \cs_new:Npn \@@_round_normal:NNwNnn #1 #2
   {
     \if_meaning:w 0 #2
@@ -508,7 +516,7 @@
     \else:
       \exp_after:wN \@@_round_special_aux:Nw
       \exp_after:wN #4
-      \__int_value:w \__int_eval:w \c_one
+      \__int_value:w \__int_eval:w 1
         \if_meaning:w 1 #1 -#6 \else: +#5 \fi:
     \fi:
     ;
