--- a/l3kernel/l3fp-trig.dtx
+++ b/l3kernel/l3fp-trig.dtx
@@ -112,7 +112,7 @@
     \or:   \@@_case_use:nw
              {
                \@@_trig:NNNNNwn #1 \@@_sin_series_o:NNwwww
-               \@@_ep_to_float:wwN #3 \c_zero
+                 \@@_ep_to_float:wwN #3 0
              }
     \or:   \@@_case_use:nw
              { \@@_invalid_operation_o:fw { #1 { sin } { sind } } }
@@ -139,7 +139,7 @@
     \or:   \@@_case_use:nw
              {
                \@@_trig:NNNNNwn #1 \@@_sin_series_o:NNwwww
-               \@@_ep_to_float:wwN 0 \c_two
+                 \@@_ep_to_float:wwN 0 2
              }
     \or:   \@@_case_use:nw
              { \@@_invalid_operation_o:fw { #1 { cos } { cosd } } }
@@ -169,7 +169,7 @@
     \or:   \@@_case_use:nw
              {
                \@@_trig:NNNNNwn #1 \@@_sin_series_o:NNwwww
-               \@@_ep_inv_to_float:wwN #3 \c_zero
+                 \@@_ep_inv_to_float:wwN #3 0
              }
     \or:   \@@_case_use:nw
              { \@@_invalid_operation_o:fw { #1 { csc } { cscd } } }
@@ -195,7 +195,7 @@
     \or:   \@@_case_use:nw
              {
                \@@_trig:NNNNNwn #1 \@@_sin_series_o:NNwwww
-               \@@_ep_inv_to_float:wwN 0 \c_two
+                 \@@_ep_inv_to_float:wwN 0 2
              }
     \or:   \@@_case_use:nw
              { \@@_invalid_operation_o:fw { #1 { sec } { secd } } }
@@ -222,7 +222,7 @@
     \or:   \@@_case_use:nw
              {
                \@@_trig:NNNNNwn #1
-                 \@@_tan_series_o:NNwwww 0 #3 \c_one
+                 \@@_tan_series_o:NNwwww 0 #3 1
              }
     \or:   \@@_case_use:nw
              { \@@_invalid_operation_o:fw { #1 { tan } { tand } } }
@@ -252,7 +252,7 @@
     \or:   \@@_case_use:nw
              {
                \@@_trig:NNNNNwn #1
-                 \@@_tan_series_o:NNwwww 2 #3 \c_three
+                 \@@_tan_series_o:NNwwww 2 #3 3
              }
     \or:   \@@_case_use:nw
              { \@@_invalid_operation_o:fw { #1 { cot } { cotd } } }
@@ -306,7 +306,7 @@
     \exp_after:wN #4
     \__int_value:w \__int_eval:w #5
       \exp_after:wN \exp_after:wN \exp_after:wN \exp_after:wN
-      \if_int_compare:w #7 > #1 \c_zero \c_one
+      \if_int_compare:w #7 > #1 0 1 \exp_stop_f:
         #1 \@@_trig_large:ww \@@_trigd_large:ww
       \else:
         #1 \@@_trig_small:ww \@@_trigd_small:ww
@@ -397,16 +397,16 @@
   {
     \exp_after:wN \@@_trigd_large_auxii:wNw
     \__int_value:w \__int_eval:w #1 + #2
-      - (#1 + #2 - \c_four) / \c_nine * \c_nine \__int_eval_end:
+      - (#1 + #2 - 4) / 9 * 9 \__int_eval_end:
     #3;
     #4; #5{#6#7#8#9};
   }
 \cs_new:Npn \@@_trigd_large_auxii:wNw #1; #2#3;
   {
-    + (#1#2 - \c_four) / \c_nine * \c_two
+    + (#1#2 - 4) / 9 * 2
     \exp_after:wN \@@_trigd_large_auxiii:www
     \__int_value:w \__int_eval:w #1#2
-      - (#1#2 - \c_four) / \c_nine * \c_nine \__int_eval_end: #3 ;
+      - (#1#2 - 4) / 9 * 9 \__int_eval_end: #3 ;
   }
 \cs_new:Npn \@@_trigd_large_auxiii:www #1; #2; #3!
   {
@@ -414,7 +414,7 @@
       \exp_after:wN \@@_use_i_until_s:nw
       \exp_after:wN \@@_fixed_continue:wn
     \else:
-      + \c_one
+      + 1
     \fi:
     \@@_fixed_sub:wwn {9000}{0000}{0000}{0000}{0000}{0000};
       {#1}#2{0000}{0000};
@@ -659,11 +659,11 @@
 \cs_new:Npn \@@_trig_large_auxi:wwwwww #1, #2, #3, #4!
   {
     \prg_replicate:nn {#1} { \@@_trig_large_auxii:ww }
-    \prg_replicate:nn { #2 - #1 * \c_eight }
+    \prg_replicate:nn { #2 - #1 * 8 }
       { \@@_trig_large_auxiii:wNNNNNNNN }
-    \prg_replicate:nn { #3 - #2 * \c_eight }
+    \prg_replicate:nn { #3 - #2 * 8 }
       { \@@_trig_large_auxiv:wN }
-    \prg_replicate:nn { \c_eight } { \@@_pack_twice_four:wNNNNNNNN }
+    \prg_replicate:nn { 8 } { \@@_pack_twice_four:wNNNNNNNN }
     \@@_trig_large_auxv:www
     ;
   }
@@ -703,7 +703,7 @@
     \exp_after:wN \@@_use_i_until_s:nw
     \exp_after:wN \@@_trig_large_auxvii:w
     \__int_value:w \__int_eval:w \c_@@_leading_shift_int
-      \prg_replicate:nn { \c_thirteen }
+      \prg_replicate:nn { 13 }
         { \@@_trig_large_auxvi:wnnnnnnnn }
       + \c_@@_trailing_shift_int - \c_@@_middle_shift_int
       \@@_use_i_until_s:nw
@@ -769,7 +769,7 @@
     \exp_after:wN \@@_use_i_until_s:nw
     \exp_after:wN \@@_trig_large_auxxi:w
     \__int_value:w \__int_eval:w \c_@@_leading_shift_int
-      \prg_replicate:nn { \c_thirteen }
+      \prg_replicate:nn { 13 }
         { \@@_trig_large_auxx:wNNNNN }
       + \c_@@_trailing_shift_int - \c_@@_middle_shift_int
       ;
@@ -778,13 +778,13 @@
   {
     \exp_after:wN \@@_trig_large_pack:NNNNNw
     \__int_value:w \__int_eval:w \c_@@_middle_shift_int
-      #2 \c_eight * #3#4#5#6
+      #2 8 * #3#4#5#6
       #1; #2
   }
 \cs_new:Npn \@@_trig_large_auxxi:w #1;
   {
     \exp_after:wN \@@_ep_mul_raw:wwwwN
-    \__int_value:w \__int_eval:w \c_zero \@@_ep_to_ep_loop:N #1 ; ; !
+    \__int_value:w \__int_eval:w 0 \@@_ep_to_ep_loop:N #1 ; ; !
     0,{7853}{9816}{3397}{4483}{0961}{5661};
     \@@_trig_small:ww
   }
@@ -832,7 +832,7 @@
       \exp_after:wN \@@_sin_series_aux_o:NNnwww
       \exp_after:wN #1
       \__int_value:w
-        \if_int_odd:w \__int_eval:w (#3 + \c_two) / \c_four \__int_eval_end:
+        \if_int_odd:w \__int_eval:w (#3 + 2) / 4 \__int_eval_end:
           #2
         \else:
           \if_meaning:w #2 0 2 \else: 0 \fi:
@@ -842,7 +842,7 @@
   }
 \cs_new:Npn \@@_sin_series_aux_o:NNnwww #1#2#3 #4; #5,#6;
   {
-    \if_int_odd:w \__int_eval:w #3 / \c_two \__int_eval_end:
+    \if_int_odd:w \__int_eval:w #3 / 2 \__int_eval_end:
       \exp_after:wN \use_i:nn
     \else:
       \exp_after:wN \use_ii:nn
@@ -920,7 +920,7 @@
     {
       \exp_after:wN \@@_tan_series_aux_o:Nnwww
       \__int_value:w
-        \if_int_odd:w \__int_eval:w #3 / \c_two \__int_eval_end:
+        \if_int_odd:w \__int_eval:w #3 / 2 \__int_eval_end:
           \exp_after:wN \reverse_if:N
         \fi:
         \if_meaning:w #1#2 2 \else: 0 \fi:
@@ -945,7 +945,7 @@
       \@@_fixed_mul_sub_back:wwwn#3;{10000}{0000}{0000}{0000}{0000}{0000};
       {
         \reverse_if:N \if_int_odd:w
-            \__int_eval:w (#2 - \c_one) / \c_two \__int_eval_end:
+            \__int_eval:w (#2 - 1) / 2 \__int_eval_end:
           \exp_after:wN \@@_reverse_args:Nww
         \fi:
         \@@_ep_div:wwwwn 0,
@@ -1052,7 +1052,7 @@
 \cs_new:Npn \@@_atan_dispatch_o:NNnNw #1#2#3#4#5@
   {
     \if_case:w
-      \__int_eval:w \@@_array_count:n {#5} - \c_one \__int_eval_end:
+      \__int_eval:w \@@_array_count:n {#5} - 1 \__int_eval_end:
          \exp_after:wN #1 \exp_after:wN #4 \c_one_fp #5
          \exp:w
     \or: #2 #4 #5 \exp:w
@@ -1086,13 +1086,14 @@
     \if_meaning:w 3 #5 \@@_case_return_ii_o:ww \fi:
     \if_case:w
       \if_meaning:w #2 #5
-        \if_meaning:w 1 #2 \c_ten \else: \c_zero \fi:
+        \if_meaning:w 1 #2 10 \else: 0 \fi:
       \else:
-        \if_int_compare:w #2 > #5 \c_one \else: \c_two \fi:
+        \if_int_compare:w #2 > #5 \exp_stop_f: 1 \else: 2 \fi:
       \fi:
-         \@@_case_return:nw { \@@_atan_inf_o:NNNw #1 #3 \c_two }
-    \or: \@@_case_return:nw { \@@_atan_inf_o:NNNw #1 #3 \c_four }
-    \or: \@@_case_return:nw { \@@_atan_inf_o:NNNw #1 #3 \c_zero }
+      \exp_stop_f:
+         \@@_case_return:nw { \@@_atan_inf_o:NNNw #1 #3 2 }
+    \or: \@@_case_return:nw { \@@_atan_inf_o:NNNw #1 #3 4 }
+    \or: \@@_case_return:nw { \@@_atan_inf_o:NNNw #1 #3 0 }
     \fi:
     \@@_atan_normal_o:NNnwNnw #1
     \s_@@ \@@_chk:w #2#3#4;
@@ -1121,7 +1122,7 @@
     \exp_after:wN \@@_atan_combine_o:NwwwwwN
     \exp_after:wN #2
     \__int_value:w \__int_eval:w
-      \if_meaning:w 2 #5 \c_seven - \fi: #3 \exp_after:wN ;
+      \if_meaning:w 2 #5 7 - \fi: #3 \exp_after:wN ;
     \c_@@_one_fixed_tl ;
     {0000}{0000}{0000}{0000}{0000}{0000};
     0,{0000}{0000}{0000}{0000}{0000}{0000}; #1
@@ -1169,11 +1170,11 @@
     \exp_after:wN #1
     \__int_value:w \__int_eval:w
       \if_meaning:w 2 #4
-        \c_seven - \__int_eval:w
+        7 - \__int_eval:w
       \fi:
       \if_int_compare:w
-          \@@_ep_compare:wwww #2,#3; #5,#6; > \c_zero
-        \c_three -
+          \@@_ep_compare:wwww #2,#3; #5,#6; > 0 \exp_stop_f:
+        3 -
         \exp_after:wN \@@_reverse_args:Nww
       \fi:
       \@@_atan_div:wnwwnw #2,#3; #5,#6;
@@ -1204,14 +1205,14 @@
       \exp_stop_f:
       \exp_after:wN \@@_atan_near:wwwn
     \fi:
-    \c_zero
+    0
     \@@_ep_div:wwwwn #1,{#2}#3; #4,{#5}#6;
     \@@_atan_auxi:ww
   }
 \cs_new:Npn \@@_atan_near:wwwn
-    \c_zero \@@_ep_div:wwwwn #1,#2; #3,
+    0 \@@_ep_div:wwwwn #1,#2; #3,
   {
-    \c_one
+    1
     \@@_ep_to_fixed:wwn #1 - #3, #2;
     \@@_atan_near_aux:wwn
   }
@@ -1258,14 +1259,14 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_atan_Taylor_loop:www #1; #2; #3;
   {
-    \if_int_compare:w #1 = - \c_one
+    \if_int_compare:w #1 = -1 \exp_stop_f:
       \@@_atan_Taylor_break:w
     \fi:
     \exp_after:wN \@@_fixed_div_int:wwN \c_@@_one_fixed_tl ; #1;
     \@@_rrot:www \@@_fixed_mul_sub_back:wwwn #2; #3;
     {
       \exp_after:wN \@@_atan_Taylor_loop:www
-      \__int_value:w \__int_eval:w #1 - \c_two ;
+      \__int_value:w \__int_eval:w #1 - 2 ;
     }
     #3;
   }
@@ -1315,7 +1316,7 @@
         \@@_fixed_mul:wwn #3; #4;
         {
           \exp_after:wN \@@_atan_combine_aux:ww
-          \__int_value:w \__int_eval:w #2 / \c_two ; #2;
+          \__int_value:w \__int_eval:w #2 / 2 ; #2;
         }
       }
       { #7 \@@_fixed_to_float:wN \@@_fixed_to_float_rad:wN }
@@ -1378,7 +1379,7 @@
 \cs_new:Npn \@@_acos_o:w #1 \s_@@ \@@_chk:w #2#3; @
   {
     \if_case:w #2 \exp_stop_f:
-      \@@_case_use:nw { \@@_atan_inf_o:NNNw #1 0 \c_four }
+      \@@_case_use:nw { \@@_atan_inf_o:NNNw #1 0 4 }
     \or:
       \@@_case_use:nw
         {
@@ -1410,7 +1411,7 @@
 \cs_new:Npn \@@_asin_normal_o:NfwNnnnnw
     #1#2#3 \s_@@ \@@_chk:w 1#4#5#6#7#8#9;
   {
-    \if_int_compare:w #5 < \c_one
+    \if_int_compare:w #5 < 1 \exp_stop_f:
       \exp_after:wN \@@_use_none_until_s:w
     \fi:
     \if_int_compare:w \__int_eval:w #5 + #6#7 + #8#9 = 1000 0001 ~
@@ -1513,7 +1514,7 @@
           \@@_acsc_normal_o:NfwNnw #1 { #1 { asec } { asecd } }
             \@@_reverse_args:Nww
         }
-    \or:   \@@_case_use:nw { \@@_atan_inf_o:NNNw #1 0 \c_four }
+    \or:   \@@_case_use:nw { \@@_atan_inf_o:NNNw #1 0 4 }
     \else: \@@_case_return_same_o:w
     \fi:
     \s_@@ \@@_chk:w #2 #3;
@@ -1532,7 +1533,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_acsc_normal_o:NfwNnw #1#2#3 \s_@@ \@@_chk:w 1#4#5#6;
   {
-    \int_compare:nNnTF {#5} < \c_one
+    \int_compare:nNnTF {#5} < 1
       {
         \@@_invalid_operation_o:fw {#2}
           \s_@@ \@@_chk:w 1#4{#5}#6;
